# graph-sp

./: .gitattributes  .gitignore  Cargo.toml  FIX_SUMMARY.md  GRAPHDATA_EXAMPLES.md  PYTHON_COMPARISON.md  PYTHON_EXAMPLES_OUTPUT.md  README.md  README.md.old  README_PYPI.md  README_PYPI.md.old  VISUAL_RESULTS.md  fix_ci_examples.py  fix_closures.py  fix_critical.py  fix_examples.py  pyproject.toml
.github/workflows/: TEST_WORKFLOW_USAGE.md  doc-checks.yml  publish.yml  publish.yml.backup  test-publish.yml  update-readme.yml
.venv-1/: pyvenv.cfg
archive/clutter-2026-01-22/: FEATURES.md  README.md.backup  demo-spacing-helpers.py  fix_arc_issues.py  fix_arcs.sh  test-dagex-fixed.py  test-dagex.py  test-parallel-execution.py
dagex/: __init__.py  analysis.py
docs/: IMPLICIT_EDGE_MAPPING.md  MERMAID_VISUALIZATION.md
examples/: all_features.rs  all_features_demo.rs  branching_and_variants.rs  branching_demo.rs  cleaner_syntax.rs  complex_objects.rs  comprehensive_demo.rs  data_types_demo.rs  generate_python_plots.py  generate_rust_plots.py  implicit_edges.rs  merging_demo.rs  mermaid_variants.rs  nested_branching_demo.rs  output_access_demo.rs  parallel_execution.rs  parallel_execution_demo.rs  per_node_output_access.rs  python_comprehensive_demo.py  python_demo.py  python_parallel_demo.py  python_radar_demo.py  radar_demo.rs  radar_demo_with_plots.rs  simple_pipeline.rs  simple_variant_demo.rs  tuple_api_demo.rs  variant_demo_full.rs  variant_factory.rs  variant_params.rs  variant_syntax.rs
examples/py/: 01_minimal_pipeline.py  02_parallel_vs_sequential.py  03_branch_and_merge.py  04_variants_sweep.py  05_output_access.py  06_graphdata_large_payload_arc_or_shared_data.py  07_predict_known_distributions.py  08_predict_mc_learning.py  09_joint_vectors_and_conditionals.py  10_tdoa_localization.py  benchmark_utils.py  python_arc_implications.py  python_cartesian_demo.py  python_comprehensive_demo.py  python_data_types_demo.py  python_demo.py  python_frontier_demo.py  python_parallel_demo.py  python_parallel_timing.py  python_parallel_timing_numpy.py  python_parallel_timing_pure_python.py  python_radar_demo.py  python_selective_data_demo.py  python_variant_demo.py
examples/rs/: 01_minimal_pipeline.rs  02_parallel_vs_sequential.rs  03_branch_and_merge.rs  04_variants_sweep.rs  05_output_access.rs  06_graphdata_large_payload_arc_or_shared_data.rs  07_predict_known_distributions.rs  08_predict_mc_learning.rs  arc_benchmark_demo.rs  arc_graphdata_demo.rs  benchmark_utils.rs  comprehensive_demo.rs  data_types_demo.rs  dynamic_variants_demo.rs  memory_tracking_demo.rs  output_access_demo.rs  parallel_execution_demo.rs  parallel_timing_demo.rs  per_node_output_access.rs  pointer_tracking_demo.rs  radar_demo.rs  radar_demo_with_plots.rs  selective_data_demo.rs  (+7 more)
python_examples/: EXPECTED_OUTPUT.md  README.md  complex_objects.py  implicit_edges.py  parallel_execution.py  port_mapping_demo.py  simple_pipeline.py
scripts/: build_readme.py  generate_readme_outputs.sh  run_examples.sh  run_python_examples.sh  smoke_test_new_features.py
src/: builder.rs  dag.rs  distribution.rs  graph_data.rs  lib.rs  node.rs  python_bindings.rs  stat_result.rs
tests/: integration_test.rs  integration_tests.rs  mermaid_tests.rs
(+18 files in other folders)
