[package]
name = "graph-sp"
version = "0.1.0"
edition = "2021"
authors = ["briday1 <your-email@example.com>"]
description = "A pure Rust graph executor supporting implicit node connections, branching, and config sweeps"
license = "MIT"
repository = "https://github.com/briday1/graph-sp"
homepage = "https://github.com/briday1/graph-sp"
documentation = "https://docs.rs/graph-sp"
keywords = ["graph", "dag", "execution", "pipeline", "workflow"]
categories = ["data-structures", "algorithms"]
readme = "README.md"

[dependencies]
