[package]
name = "graph-sp"
version = "0.1.0"
edition = "2021"
authors = ["briday1 <your-email@example.com>"]
description = "A pure Rust graph executor supporting implicit node connections, branching, and config sweeps"
license = "MIT"
repository = "https://github.com/briday1/graph-sp"
homepage = "https://github.com/briday1/graph-sp"
documentation = "https://docs.rs/graph-sp"
keywords = ["graph", "dag", "execution", "pipeline", "workflow"]
categories = ["data-structures", "algorithms"]
readme = "README.md"

[dependencies]
pyo3 = { version = "0.18.3", optional = true, default-features = false, features = ["extension-module", "auto-initialize", "macros"] }

[features]
python = ["pyo3"]

[lib]
name = "graph_sp"
crate-type = ["cdylib", "rlib"]
